[gd_scene load_steps=5 format=3 uid="uid://bxw3vl101b4gl"]

[ext_resource type="Texture2D" uid="uid://bdy1u78e6e52o" path="res://assets/sprites/items/bucket.png" id="1_agipo"]
[ext_resource type="Script" path="res://scripts/trash_bucket.gd" id="1_d783m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eod3f"]
size = Vector2(12, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jkcap"]
size = Vector2(14, 1)

[node name="TrashBucket" type="StaticBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_d783m")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5.96046e-08, -4.76837e-07)
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_agipo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_eod3f")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_jkcap")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
